# django-functest

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  RELEASE.rst  conftest.py  download_firefox.sh  pyproject.toml  pytest.ini  release.sh  requirements-dev.txt  requirements-test.txt  run_coveralls.py  runtests.py  setup.cfg  setup.py  tox.ini  update_migration.py
.github/workflows/: pythonpackage.yml
django_functest/: __init__.py  base.py  exceptions.py  files.py  funcselenium.py  funcwebtest.py  server.py  urls.py  utils.py
django_functest/tests/: admin.py  base.py  models.py  settings.py  test_common.py  test_selenium.py  test_utils.py  urls.py  views.py
django_functest/tests/migrations/: 0001_initial.py
django_functest/tests/templates/django_functest/tests/: edit_thing.html  list_things.html  test1.html  test_misc.html
docs/: common.rst  conf.py  django_functest.rst  index.rst  installation.rst  interactive.rst  pytest.rst  requirements.txt  selenium.rst  shadow_dom.rst  tips.rst  usage.rst  utils.rst  webtest.rst
examples/example_project/: conftest.py  db.sqlite3  pytest.ini  requirements.txt
examples/example_project/accounts/: admin.py
examples/example_project/accounts/migrations/: 0001_initial.py
examples/example_project/accounts/tests/: base.py  factories.py  test_admin.py
examples/example_project/example_project/: asgi.py  settings.py  urls.py  wsgi.py
src/django_functest/: __init__.py  base.py  files.py  funcselenium.py  funcwebtest.py  server.py  urls.py  utils.py
tests/django_functest_tests/: base.py  models.py  settings.py  test_common.py  test_selenium.py  test_utils.py  urls.py  views.py
tests/django_functest_tests/migrations/: 0001_initial.py
tests/django_functest_tests/templates/tests/: auto_submit_form.html  delayed_appearance.html  edit_thing.html  list_things.html  long_page.html  new_browser_session_test.html  overflowing.html  test_misc.html  thing_cleared.html  unscrollable.html  web_components.html  with_confirm.html
