[metadata]
name = django-functest
version = attr: django_functest.__version__
description = Helpers for creating functional tests in Django, with a unified API for WebTest and Selenium tests.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Luke Plant
author_email = L.Plant.98@cantab.net
url = https://github.com/django-functest/django-functest
license = BSD
keywords = django-functest
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Django
    Framework :: Django :: 2.0
    Framework :: Django :: 2.1
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = django_functest
package_dir = django_functest=src/django_functest
python_requires = >=3.7
include_package_data = True
install_requires =
    django-webtest>=1.9.9
    WebTest>=3
    selenium>=4
    furl>=0.4.9
    pyquery>=1.2.10
    Django>=2.0
zip_safe = False

[flake8]
exclude = .tox,.git,docs,migrations,dist,build,downloads
ignore = E123,E128,E731,FI10,FI12,FI15,FI16,FI17,FI50,FI51,FI52,FI53,FI54,FI55,FI56,FI57,FI18,W504
max-line-length = 119
